# fibbocrew

./: README.md  docker-compose.yml  pyproject.toml  report.md
knowledge/: base-teste.csv  cliente-uniasselvi_.csv
src/fibboproject/: crew.py  main.py
src/fibboproject/config/: agents.yaml  tasks.yaml
src/fibboproject/tools/: heelper_tool_liveseo.py
