[project]
name = "fibboproject"
version = "0.1.0"
description = "fibboproject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "google-generativeai",
    "agentops"
]

[project.scripts]
fibboproject = "fibboproject.main:run"
run_crew = "fibboproject.main:run"
train = "fibboproject.main:train"
replay = "fibboproject.main:replay"
test = "fibboproject.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
